Recap-501 redefined search conditions for request search

--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -166,7 +166,7 @@
                                                     asterisk(<span class="error-color">*</span>) are mandatory.
                                                 </div>
                                                 <div class="" id="note-ILBD" style="padding-left:5px;margin-top:4px;">
-                                                    <strong>Note:</strong> Count of items requested by Borrow Direct Users per institution..
+                                                    <strong>Note:</strong> Count of items requested by Borrow Direct Users per institution.
                                                 </div>
                                                 <div class="" id="note-partners" style="padding-left:5px;margin-top:4px;">
                                                     <strong>Note:</strong>Count of requests (Physical and EDD) per Institution with Collection Group Designation.
