--- a/src/main/resources/templates/collection.html
+++ b/src/main/resources/templates/collection.html
@@ -49,15 +49,10 @@
                                 </div>
                             </div>
                             <div id="noteTextDivId">
-                                <em id="noteTextSpanId" class="notes">NOTE:</em>
+                                <strong>NOTE:</strong>
                                 <ul id="notesListId" style="list-style-type:disc;">
-                                    <li>
-                                        <em id="noteTextMultipleSpanId">Multiple item barcodes separated by commas(,)
-                                            can be added to retrieve the records.</em>
-                                    </li>
-                                    <li>
-                                        <em id="noteTextMaxSpanId">A maximum of only 10 items can be retrieved.</em>
-                                    </li>
+                                    <li>Multiple item barcodes separated by commas(,) can be added to retrieve the records.</li>
+                                    <li>A maximum of only 10 items can be retrieved.</li>
                                 </ul>
                             </div>
                         </div>
