--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -449,7 +449,7 @@
 
                                             <div class="" style="padding-left: 5px;">
                                                 <strong>Note:</strong>
-                                                <ul class="number-list">
+                                                <ul class="" style="list-style-type:disc;">
                                                     <li>The accession/deaccession count report shows the count of items
                                                         accessioned and deaccessioned by partner institutions.
                                                     </li>
