Recap-520,521,527 : Made changes for users to request items based on privileges. Private items can be requested by only superadmin and recap users.

--- a/src/main/resources/templates/request.html
+++ b/src/main/resources/templates/request.html
@@ -363,7 +363,7 @@
                                                                         th:field="${requestForm.deliveryLocationInRequest}"
                                                                         th:onchange="'javascript:toggleDeliveryLocationValidation()'">
                                                                     <option value=""></option>
-                                                                    <option th:each="location : ${requestForm.deliveryLocations}" th:value="${location}" th:text="${location}"></option>
+                                                                    <option th:each="location : ${requestForm.deliveryLocations}" th:value="${location.getCustomerCode()}" th:text="${location.getDescription()}"></option>
                                                                 </select>
                                                                 <span id="deliveryLocationErrorMessage" style="color: red;">Delivery location is required.</span>
                                                             </div>
