--- a/src/main/resources/templates/recapHeader.html
+++ b/src/main/resources/templates/recapHeader.html
@@ -30,7 +30,7 @@
                                                 <input type="hidden"
                                                        th:name="${_csrf.parameterName}"
                                                        th:value="${_csrf.token}" />
-                                                <input type="submit" value="Logout" class="logout-login logout" />
+                                                <button type="submit" value="Logout" class="btn btn-link logout-login logout"><span></span></button>
                                             </form>
                                         </div>
                                         <div class="pull-right">
