Recap-523 ui changes for reports,roles and users tab

--- a/src/main/resources/templates/reports.html
+++ b/src/main/resources/templates/reports.html
@@ -86,26 +86,6 @@
                                                                 This Field is Required</p>
                                                         </div>
                                                     </div>
-                                                    <div class="col-md-2 col-sm-3 padding-right-50 col-lg-2"
-                                                         id="RequestTypeshow" style="display:none">
-                                                        <div class="form-group">
-                                                            <label for="ReportRequestType">Request Type <span
-                                                                    class="error-color">*</span> </label>
-                                                            <div class="select-holder">
-                                                                <select class="form-control themed-input themed-select"
-                                                                        id="ReportRequestType"
-                                                                        name="ReportRequestType"
-                                                                        multiple="multiple"
-                                                                        th:field="*{reportRequestType}">
-                                                                    <option value="Retrieval">Retrieval</option>
-                                                                    <option value="Recall">Recall</option>
-                                                                </select>
-                                                            </div>
-                                                            <p id="requestTypeErrorText"
-                                                               style="display: none;color: red">This Field is
-                                                                Required</p>
-                                                        </div>
-                                                    </div>
                                                     <div class="col-md-2 col-sm-2 col-lg-2">
                                                             <div class="form-group">
                                                                 <label for="RequestDateRangefrom">Date Range <span
@@ -158,7 +138,7 @@
                                                     <div class="col-lg-1 col-md-1 col-md-offset-1 col-sm-1" style="margin-top: -5px;margin-left: 15px;">
                                                         <button class="btn themed-button themed-button-search"
                                                                 id="searchButton"
-                                                                type="submit">Search
+                                                                type="submit">Generate Report
                                                         </button>
                                                     </div>
                                                 </div>
@@ -436,7 +416,7 @@
                                                 </div>
                                                 <div class="col-md-3" style="margin-top: -5px;">
                                                         <button class="btn themed-button themed-button-search" type="submit"
-                                                                id="accessionSearchButton">Search
+                                                                id="accessionSearchButton">Generate Report
                                                         </button>
                                                 </div>
                                             </div>
