--- a/src/main/resources/templates/userRolesSearch.html
+++ b/src/main/resources/templates/userRolesSearch.html
@@ -146,9 +146,11 @@
                                                     </td>
                                                     <td class="text-center"><a id="userDataEdit" href="#"><span
                                                             class="glyphicon glyphicon-pencil"
+                                                            th:title="'Edit User'"
                                                             th:onclick="'editUser(\'' + ${userRolesL.userId} + '\',\'' + ${userRolesL.networkLoginId} + '\')'"></span></a>
                                                         <a id="userDataDelete" href="#"><span
                                                                 class="glyphicon glyphicon-trash"
+                                                                th:title="'Delete User'"
                                                                 th:onclick="'deleteUserRole(\'' + ${userRolesL.networkLoginId} + '\',\'' + ${userRolesL.userId} + '\')'"></span></a>
                                                     </td>
 
@@ -310,21 +312,18 @@
                                                    id="emailId" th:field="${userRoleForm.emailId}"  onblur="validateEmailAddress()" th:onkeyup="'javascript:toggleUserEmailValidation()'"
                                                    placeholder="" type="email"/>
                                             <span id="emailIdErrMsg" style="color: red;display: none">Please provide valid email address </span>
+                                            <p style="margin-top: 10px;margin-bottom: 20px;">Fields marked with asterisk(<span
+                                                    class="error-color">*</span>) are mandatory.</p>
                                         </div>
                                     </div>
-
-
                                     <div class="row">
-                                        <div class="col-md-3 text-right col-sm-4"></div>
-                                        <div class="col-md-9 col-sm-8">
-                                            <p class="margin-btm-30 margin-top-less-10">Fields marked with asterik(<span
-                                                    class="error-color">*</span>) are mandatory.</p>
+                                        <div class="col-xs-12 col-md-push-3 col-sm-pus-5 text-center" style="margin-top: -10px;">
                                             <div class="margin-btm-10 users-createrequest-button">
                                                 <button id="createButton" type="button" onclick="submitForm()"
-                                                        class="btn btn-default themed-button btn-primary">Submit
+                                                        class="btn btn-default themed-button btn-primary">Create User
                                                 </button>
                                                 <button id="reset" type="button"
-                                                        class="btn btn-default themed-button themed-button-cancel margin-left-10">
+                                                        class="btn btn-default themed-button themed-button-cancel">
                                                     Clear
                                                 </button>
                                             </div>
@@ -444,21 +443,18 @@
                                                    th:field="${userRoleForm.editEmailId}" placeholder=""
                                                    type="email" onblur="validateEditEmailAddress()"/>
                                             <span id="editEmailIdErrMsg" style="color: red;display: none">Please provide valid email address </span>
+                                            <p style="margin-bottom: 20px;margin-top: 10px;">Fields marked with asterisk(<span
+                                                    class="error-color">*</span>) are mandatory.</p>
                                         </div>
                                     </div>
-
-
                                     <div class="row">
-                                        <div class="col-md-3 text-right col-sm-4"></div>
-                                        <div class="col-md-9 col-sm-8">
-                                            <p class="margin-btm-30 margin-top-less-10">Fields marked with asterik(<span
-                                                    class="error-color">*</span>) are mandatory.</p>
+                                        <div class="col-xs-12 col-md-push-3 col-sm-pus-5 text-center" style="margin-top: -10px;">
                                             <div class="margin-btm-10 users-createrequest-button">
                                                 <button id="editcreateButton" type="button" onclick="editUserDetails()"
-                                                        class="btn btn-default themed-button btn-primary">Submit
+                                                        class="btn btn-default themed-button btn-primary">Edit User
                                                 </button>
                                                 <button type="reset"
-                                                        class="btn btn-default themed-button themed-button-cancel margin-left-10"
+                                                        class="btn btn-default themed-button themed-button-cancel"
                                                         onclick="editclear();">Clear
                                                 </button>
                                             </div>
@@ -576,11 +572,10 @@
 
 
                                     <div class="row">
-                                        <div class="col-md-3 text-right col-sm-4"></div>
-                                        <div class="col-md-9 col-sm-8">
+                                        <div class="col-xs-12 col-md-push-3 col-sm-pus-5 text-center">
                                             <div class="margin-btm-10 users-createrequest-button">
                                                 <button id="deleteUserButton" type="button" onclick="deleteUser()"
-                                                        class="btn btn-default themed-button btn-primary">Delete
+                                                        class="btn btn-default themed-button btn-primary">Delete User
                                                 </button>
                                             </div>
                                         </div>
